Migrate project from Java 17 to Java 8 compatibility
Major changes:
- Downgrade Java version from 17 to 1.8 in all POMs
- Downgrade Spring Boot from 3.2.5 to 2.7.18
- Convert all Record classes to immutable POJOs
- Replace switch expressions with if-else chains
- Replace var with explicit type declarations
- Change jakarta.* imports to javax.* (Spring Boot 2.x)
- Replace LocalDateTime/Instant with Date/SimpleDateFormat
- Use ThreadLocal for thread-safe SimpleDateFormat
- Update all accessor calls from record.field() to record.getField()

All modules compile successfully and tests pass on Java 8.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>